adding some styling to the app, background images, font styles and layout look n feel

--- a/client/src/assets/sass/base/typography.sass
+++ b/client/src/assets/sass/base/typography.sass
@@ -1,20 +1,12 @@
 h1, h2, h3, h4, h5, h6
   font-family: $family-headings
-  color: $theme-yellow
+  color: $black
   font-weight: 600
 
 .bold
   font-weight: $weight-bold
 
 .title
-  color: $theme-yellow
+  color: $black
 
-.hero-title
-  font-size: 60px
-  color: $theme-yellow
-
-.hero-banner.hero.is-success
-  .subtitle, .title
-    color: $theme-yellow
-    text-shadow: 0px 0px 3px rgba(0,0,0, 0.4)
 
