--- a/client/src/assets/sass/pages/profile-page.sass
+++ b/client/src/assets/sass/pages/profile-page.sass
@@ -10,6 +10,12 @@
     background-color: transparent
     font-weight: 600
     line-height: 1.125
+    +mobile
+      width: 100%
+      font-size: $size-6
+    +tablet
+      width: 100%
+      font-size: $size-2
 
   &__stars--icon
     background-color: $black;
